2004-10-11 Seiichi SATO <ssato@sh.rim.or.jp>

	I got "YOUR MEMORY MANAGEMENT IS PERFECT!" message from kik_mem by this
	changes:

	* inputmethod/iiimf/Makefile.in, inputmethod/kbd/Makefile.in,
	  inputmethod/m17nlib/Makefile.in, inputmethod/uim/Makefile.in:
	  added DEB_CFLAGS

	* inputmethod/iiimf/im_iiimf.c, inputmethod/kbd/im_kbd.c,
	  inputmethod/m17nlib/im_m17nlib.c, inputmethod/uim/im_uim.c:
	  - #include <kiklib/kik_mem.h>
	  - minor cleanups.

	* inputmethod/uim/im_uim.c: #include <uim-im-switcher.h>

	* x_im.c, x_im.h: fixed a bug caused by using uim and m17nlib together.

2004-10-10 Seiichi SATO <ssato@sh.rim.or.jp>

	* configure.in:
	  - --disable-kbd.
	  - --enable-dnd -> --disable-dnd
	  - USE_IM_PLUGIN in IM_CFLAGS.
	
	* README.iscii, README.ja, man/mlterm.1, etc/key, x_screen.c,
	  x_screen.c, x_shortcut.c, x_shortcut.h:
	  - removed screen->kbd.
	  - removed XIM_OPEN and XIM_CLOSE.
	  - added IM_HOTKEY.

	* x_screen.h (compare_key_state_with_modmap): new function for
	  callback of input methods.

	* inputmethod/iiimf/im_iiimf.c, inputmethod/uim/im_uim.c,
	  inputmethod/m17nlib/im_m17nlib.c (switch_mode): new functions for
	  IM_HOTKEY.

	* inputmethod/m17nlib/im_m17nlib.c: added status window.

	* inputmethod/iiimf/im_iiimf.c, inputmethod/uim/im_uim.c,
	  inputmethod/m17nlib/im_m17nlib.c (im_get_info):
	* tool/mlconfig/mc_im.c (get_im_info):
	  added 'encoding' argument.

	* x_kbd.c, x_kbd.h: moved to ..
	* inputmethod/kdb/im_kbd.c: this.

	* inputmethod/kdb/Makefile.in: new file.

	* xwindow/Makefile.in:
	  - removed x_kbd.o.
	  - added IM_CFLAGS.

	* x_im.h, x_im.h: added ml_iscii_keymap_new, ml_iscii_keymap_delete and
	  ml_convert_ascii_to_iscii into x_im_export_syms_t.

	* x_main_config.c: minor cleanup.

2004-10-09 Seiichi SATO <ssato@sh.rim.or.jp>

	* ml_cursor.h: added missig #endif.

2004-10-09  Araki Ken  <arakiken@users.sf.net>

	* ml_cursor.[ch]: Intensified cursor operations.
